Fix project comments unreadable (#928)

--- a/addons/dark-www/experimental_scratchwww.css
+++ b/addons/dark-www/experimental_scratchwww.css
@@ -1,4 +1,4 @@
-body:not(.sa-body-editor),
+html > body:not(.sa-body-editor),
 body:not(.sa-body-editor) h1,
 body:not(.sa-body-editor) h2,
 body:not(.sa-body-editor) h3,
